Actualizacion Cors