@@ -5,6 +5,7 @@ import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
 import org.springframework.web.cors.*;
 
+import java.util.Arrays;
 import java.util.List;
 
 @Configuration
@@ -18,14 +19,17 @@ public class CorsConfig {
         CorsConfiguration config = new CorsConfiguration();
 
         if ("*".equals(allowedOrigins.trim())) {
-            config.setAllowedOriginPatterns(List.of("*"));
+            config.setAllowedOriginPatterns(Arrays.asList("*"));
+            config.setAllowCredentials(false);
         } else {
-            config.setAllowedOrigins(List.of(allowedOrigins.split(",")));
+            config.setAllowedOrigins(Arrays.asList(allowedOrigins.split(",")));
+            config.setAllowCredentials(true);
         }
 
-        config.setAllowedMethods(List.of("GET","POST","OPTIONS"));
-        config.setAllowedHeaders(List.of("*"));
-        config.setAllowCredentials(true);
+        config.setAllowedMethods(Arrays.asList("GET","POST","PUT","DELETE","OPTIONS"));
+        config.setAllowedHeaders(Arrays.asList("*"));
+        config.setExposedHeaders(Arrays.asList("*"));
+        config.setMaxAge(3600L);
 
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
         source.registerCorsConfiguration("/**", config);
